# newsletter

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: audit-on-push.yml  audit.yml  general.yml
config/: default.toml  default.yml
configuration/: default.yml
migrations/: 1_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
