[package]
name = "newsletter"
version = "0.0.1"
edition = "2021"
authors = ["André Filipe Barranco <b.andrefilipe@gmail.com>"]
license = "MIT"

[lib]
name = "newsletter"
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.136", features = ["derive"] }
config = "0.12.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"

[dev-dependencies]
reqwest = "0.11.10"
