[package]
name = "newsletter"
version = "0.0.1"
edition = "2021"
authors = ["André Filipe Barranco <b.andrefilipe@gmail.com>"]
license = "MIT"

[lib]
name = "newsletter"
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.0.1" }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.137", features = ["derive"] }
config = { version = "0.13.1" }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = { version = "0.4.19" }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3.2" }
tracing-log = { version = "0.1.3" }
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls", # Use the `actix` runtime and `rustls` TLS backend
    "macros", # Add support for the `query*!` macros, which allow compile-time checked queries
    "postgres", # Add support for the Postgres database server
    "uuid", # Add support for UUID (in Postgres)
    "chrono", # Add support for date and time types from `chrono`
    "migrate" # Add support for the migration management and `migrate!` macro, which allow compile-time embedded migrations
]

[dev-dependencies]
reqwest = { version = "0.11.10" }
once_cell = { version = "1.10.0" }
